added confirmation activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,17 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".Email"
-            android:label="@string/title_activity_email" />
+            android:label="@string/title_activity_email"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".UserDetails"
-            android:parentActivityName=".Email" />
+            android:parentActivityName=".Email"
+            android:windowSoftInputMode="adjustPan"/>
         <activity
             android:name=".Feedback"
             android:parentActivityName=".UserDetails" />
