--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,14 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0-beta1'
     compile 'com.android.support:design:24.0.0-beta1'
-    compile 'com.firebase:firebase-client-android:2.3.1'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
     compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.google.firebase:firebase-database:9.0.2'
+    
+
+
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
